argocd/apps/home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  serviceName: 
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8123
          protocol: TCP
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 2Gi
            cpu: 1
        volumeMounts:
        - name: config
          mountPath: /config
        - name: dbus
          mountPath: /run/dbus
          readOnly: True
        - name: homekit-triggers-workaround
          mountPath: /usr/src/homeassistant/homeassistant/components/homekit/type_triggers.py
          subPath: type_triggers.py
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant
      # Only needed for bluetooth/thread/zigbee
      - name: dbus
        hostPath:
          path: /run/dbus
      # Only needed if exposing triggers as homekit programmable switches
      - name: homekit-triggers-workaround
        emptyDir: {}
      - name: setup
        configMap:
          name: home-assistant
          defaultMode: 0777
          items:
            - key: setup
              path: setup.sh
      - name: initial-config
        configMap:
          name: home-assistant
          items:
          - key: configuration
            path: configuration.yaml
