argocd/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
      name: http
