argocd/apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    avp.kubernetes.io/path: "vaults/homelab/items/dns-hosts"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-ip-allow-list@kubernetescrd
spec:
  rules:
  - host: <home-assistant>
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <home-assistant>
    secretName: home-assistant
